# smart_contract_testing_example

./: .gitignore  README.md
birthcert/: CMakeLists.txt  README.md
birthcert/include/: README.md  birthcert.hpp  certificate.hpp  mock_suite.hpp  mockretire.hpp  retirement_contract.hpp  test_suite.hpp
birthcert/src/: CMakeLists.txt  birthcert.cpp  mock_suite.cpp  mockretire.cpp
birthcert/tests/: README.md  global.sh  run_all_tests.sh
birthcert/tests/component_tests/: component_tests.sh
birthcert/tests/integration_tests/: integration_tests.sh
birthcert/tests/unit_tests/: unit_tests.sh
birthcertusa/: CMakeLists.txt  README.txt
birthcertusa/include/: birthcertusa.hpp  certificate.hpp  mock_suite.hpp  mockretire.hpp  retirement.hpp  test_suite.hpp
birthcertusa/src/: CMakeLists.txt  birthcertusa.cpp  mock_suite.cpp  mockretire.cpp  test_suite.cpp
birthcertusa/tests/: config.ini  global.sh
birthcertusa/tests/component_tests/: component_tests.sh
birthcertusa/tests/integration_tests/: integration_tests.sh
birthcertusa/tests/unit_tests/: unit_tests.sh
retirement/: CMakeLists.txt  README.md  README.txt
retirement/include/: README.md  authority.hpp  reminder.hpp  retirement.hpp
retirement/ricardian/: README.md
retirement/src/: CMakeLists.txt  retirement.cpp
retirementus/: CMakeLists.txt
retirementus/include/: authority.hpp  reminder.hpp  retirementus.hpp
retirementus/src/: CMakeLists.txt  retirementus.cpp
